; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Str.c_JsonArrayAddData.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Str.c_JsonArrayAddData.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @JsonArrayAddData(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = mul nsw i32 %9, 4
  %11 = add nsw i32 %10, 32
  %12 = call i8* @ZeroMalloc(i32 %11)
  store i8* %12, i8** %8, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @B64_Encode(i8* %13, i8* %14, i32 %15)
  %17 = load i32*, i32** %4, align 8
  %18 = load i8*, i8** %8, align 8
  %19 = call i32 @JsonArrayAddStr(i32* %17, i8* %18)
  store i32 %19, i32* %7, align 4
  %20 = load i8*, i8** %8, align 8
  %21 = call i32 @Free(i8* %20)
  %22 = load i32, i32* %7, align 4
  ret i32 %22
}

declare dso_local i8* @ZeroMalloc(i32) #1

declare dso_local i32 @B64_Encode(i8*, i8*, i32) #1

declare dso_local i32 @JsonArrayAddStr(i32*, i8*) #1

declare dso_local i32 @Free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
